<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:icon="@drawable/ic_account_circle_white_24dp"
        android:id="@id/menu_user_info"
        android:checked="true"
        android:title="@string/Account"
        android:checkable="true"/>
    <item
        android:icon="@drawable/ic_settings_applications_white_24dp"
        android:id="@id/menu_user_settings"
        android:title="@string/settings"
        android:checkable="true"/>
    <item
        android:icon="@drawable/ic_play_circle_outline_white_24dp"
        android:id="@id/menu_player"
        android:title="@string/player"
        android:checkable="true"/>
    <item
        android:icon="@drawable/ic_language_white_24dp"
        android:id="@id/menu_language"
        android:title="@string/language"
        android:checkable="false"/>
    <item
        android:icon="@drawable/ic_hide_categories_white_24dp"
        android:id="@id/menu_hide_categories"
        android:title="@string/hide_categories"
        android:checkable="false"/>
    <item
        android:icon="@drawable/ic_history_white_24dp"
        android:id="@id/menu_clear_history"
        android:title="@string/clear_history"
        android:checkable="false"/>
</menu>
