<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingStart="24dp"
    android:paddingEnd="34dp"
    android:paddingTop="40dp">

    <TextView
        android:id="@id/dialog_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/change_pass"
        android:textColor="@color/white_color"
        android:textSize="30sp"
        android:textStyle="bold"/>

    <EditText
        android:id="@id/old_password"
        style="@style/CustomEditTextStyle"
        android:layout_width="430dp"
        android:layout_height="54dp"
        android:layout_marginTop="18dp"
        android:hint="@string/old_password"
        android:inputType="numberPassword"
        android:maxLength="5"
        android:maxLines="1"
        android:textSize="18sp"
        android:imeOptions="actionNext"/>

    <EditText
        android:id="@id/password"
        style="@style/CustomEditTextStyle"
        android:layout_width="430dp"
        android:layout_height="54dp"
        android:layout_marginTop="10dp"
        android:hint="@string/new_password"
        android:inputType="numberPassword"
        android:maxLength="5"
        android:maxLines="1"
        android:textSize="18sp"
        android:imeOptions="actionNext"/>

    <EditText
        android:id="@id/confirm_password"
        style="@style/CustomEditTextStyle"
        android:layout_width="430dp"
        android:layout_height="54dp"
        android:layout_marginTop="10dp"
        android:hint="@string/confirm_password"
        android:inputType="numberPassword"
        android:maxLength="5"
        android:maxLines="1"
        android:textSize="18sp"
        android:imeOptions="actionNext"/>

    <Button
        android:id="@id/save_password"
        android:layout_width="220dp"
        android:layout_height="52dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/button_style"
        android:text="@string/save"
        android:textColor="@color/white_color"
        android:textSize="18sp"
        android:textStyle="bold"/>

    <TextView
        android:id="@id/advanced_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:text="@string/advanced"
        android:textColor="@color/white_color"
        android:textSize="28sp"
        android:textStyle="bold"/>

    <CheckBox
        android:id="@id/runOnStart"
        android:theme="@style/CheckBoxStyle"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginTop="8dp"
        android:text="@string/start_with_system"
        android:textColor="@color/white_color"
        android:textSize="18sp"
        android:textStyle="bold"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:id="@id/update_btn"
            android:layout_width="220dp"
            android:layout_height="52dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/button_style"
            android:text="@string/update"
            android:textColor="@color/white_color"
            android:textSize="18sp"
            android:visibility="gone"/>
        <Button
            android:id="@id/reset_btn"
            android:layout_width="220dp"
            android:layout_height="52dp"
            android:layout_marginStart="12dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/button_style"
            android:text="@string/reset"
            android:textColor="@color/white_color"
            android:textSize="18sp"/>
    </LinearLayout>

    <ProgressBar
        android:id="@id/loading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"/>
</LinearLayout>
