<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout android:layout_width="match_parent" android:layout_height="match_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <TextView android:textSize="@dimen/_12ssp" android:textStyle="bold" android:textColor="@color/white_color" android:gravity="center" android:id="@id/dialog_title" android:padding="4.0dp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/_15sdp" android:text="@string/account_info" android:layout_marginStart="@dimen/_3sdp" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent" />
    <LinearLayout android:id="@id/linearLayout" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="4.0dp" android:layout_marginStart="@dimen/_3sdp" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/dialog_title">
        <TextView android:textSize="@dimen/_8ssp" android:textStyle="bold" android:textColor="@color/white_color" android:background="@color/semi_transparent" android:padding="@dimen/_3sdp" android:layout_width="@dimen/_100sdp" android:layout_height="wrap_content" android:layout_margin="4.0dp" android:text="@string/account_user" />
        <TextView android:textSize="@dimen/_8ssp" android:textStyle="bold" android:textColor="@color/white_color" android:gravity="center" android:id="@id/tv_userCode" android:background="@color/semi_transparent" android:padding="@dimen/_3sdp" android:layout_width="250.0dp" android:layout_height="wrap_content" android:layout_margin="4.0dp" />
    </LinearLayout>
    <LinearLayout android:id="@id/linearLayout2" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="4.0dp" android:layout_marginStart="@dimen/_3sdp" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/linearLayout">
        <TextView android:textSize="@dimen/_8ssp" android:textStyle="bold" android:textColor="@color/white_color" android:background="@color/semi_transparent" android:padding="@dimen/_3sdp" android:layout_width="@dimen/_100sdp" android:layout_height="wrap_content" android:layout_margin="4.0dp" android:text="@string/create_date" />
        <TextView android:textSize="@dimen/_8ssp" android:textStyle="bold" android:textColor="@color/white_color" android:gravity="center" android:id="@id/tv_createDate" android:background="@color/semi_transparent" android:padding="@dimen/_3sdp" android:layout_width="250.0dp" android:layout_height="wrap_content" android:layout_margin="4.0dp" />
    </LinearLayout>
    <LinearLayout android:id="@id/linearLayout3" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="4.0dp" android:layout_marginStart="@dimen/_3sdp" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/linearLayout2">
        <TextView android:textSize="@dimen/_8ssp" android:textStyle="bold" android:textColor="@color/white_color" android:background="@color/semi_transparent" android:padding="@dimen/_3sdp" android:layout_width="@dimen/_100sdp" android:layout_height="wrap_content" android:layout_margin="4.0dp" android:text="@string/expire_date" />
        <TextView android:textSize="@dimen/_8ssp" android:textStyle="bold" android:textColor="@color/white_color" android:gravity="center" android:id="@id/tv_expireDate" android:background="@color/semi_transparent" android:padding="@dimen/_3sdp" android:layout_width="250.0dp" android:layout_height="wrap_content" android:layout_margin="4.0dp" />
    </LinearLayout>
    <LinearLayout android:id="@id/linearLayout4" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="4.0dp" android:layout_marginStart="@dimen/_3sdp" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/linearLayout3">
        <TextView android:textSize="@dimen/_8ssp" android:textStyle="bold" android:textColor="@color/white_color" android:background="@color/semi_transparent" android:padding="@dimen/_3sdp" android:layout_width="@dimen/_100sdp" android:layout_height="wrap_content" android:layout_margin="4.0dp" android:text="@string/is_trial" />
        <TextView android:textSize="@dimen/_8ssp" android:textStyle="bold" android:textColor="@color/white_color" android:gravity="center" android:id="@id/tv_isTrial" android:background="@color/semi_transparent" android:padding="@dimen/_3sdp" android:layout_width="250.0dp" android:layout_height="wrap_content" android:layout_margin="4.0dp" />
    </LinearLayout>
    <TextView android:textSize="@dimen/_12ssp" android:textStyle="bold" android:textColor="@color/white_color" android:gravity="center" android:id="@id/dialog_app" android:padding="4.0dp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="4.0dp" android:text="@string/app_info" android:layout_marginStart="@dimen/_3sdp" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/linearLayout4" />
    <LinearLayout android:id="@id/linearLayout5" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="4.0dp" android:layout_marginStart="@dimen/_3sdp" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/dialog_app">
        <TextView android:textSize="@dimen/_8ssp" android:textStyle="bold" android:textColor="@color/white_color" android:background="@color/semi_transparent" android:padding="@dimen/_3sdp" android:layout_width="@dimen/_100sdp" android:layout_height="wrap_content" android:layout_margin="4.0dp" android:text="@string/mac_address" />
        <TextView android:textSize="@dimen/_8ssp" android:textStyle="bold" android:textColor="@color/white_color" android:gravity="center" android:id="@id/tv_macAddress" android:background="@color/semi_transparent" android:padding="@dimen/_3sdp" android:layout_width="250.0dp" android:layout_height="wrap_content" android:layout_margin="4.0dp" />
    </LinearLayout>
    <LinearLayout android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="4.0dp" android:layout_marginStart="@dimen/_3sdp" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/linearLayout5">
        <TextView android:textSize="@dimen/_8ssp" android:textStyle="bold" android:textColor="@color/white_color" android:background="@color/semi_transparent" android:padding="@dimen/_3sdp" android:layout_width="@dimen/_100sdp" android:layout_height="wrap_content" android:layout_margin="4.0dp" android:text="@string/version" />
        <TextView android:textSize="@dimen/_8ssp" android:textStyle="bold" android:textColor="@color/white_color" android:gravity="center" android:id="@id/tv_version" android:background="@color/semi_transparent" android:padding="@dimen/_3sdp" android:layout_width="250.0dp" android:layout_height="wrap_content" android:layout_margin="4.0dp" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
