<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout android:orientation="vertical" android:background="@color/black_transparent_c80" android:padding="5.0dp" android:layout_width="@dimen/_110sdp" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <TextView android:textSize="@dimen/_8ssp" android:textColor="@color/white_color" android:gravity="center" android:id="@id/dialog_title" android:layout_width="0.0dp" android:layout_height="wrap_content" android:layout_marginTop="@dimen/_3sdp" android:text="@string/enter_password" android:layout_marginStart="@dimen/_3sdp" android:layout_marginEnd="@dimen/_3sdp" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent" />
    <EditText android:enabled="true" android:textSize="@dimen/_8ssp" android:textColor="@color/white_color" android:textColorHint="@color/white_color" android:id="@id/password" android:focusable="true" android:focusableInTouchMode="true" android:layout_width="0.0dp" android:layout_height="wrap_content" android:layout_marginTop="@dimen/_3sdp" android:hint="@string/password" android:maxLines="1" android:ems="10" android:maxLength="5" android:inputType="numberPassword" android:windowSoftInputMode="adjustNothing" android:imeOptions="actionNext" android:layout_marginStart="@dimen/_3sdp" android:layout_marginEnd="@dimen/_3sdp" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/dialog_title" />
    <Button android:textAppearance="?android:textAppearanceSmall" android:textSize="@dimen/_8ssp" android:textStyle="bold" android:textColor="@color/white_color" android:gravity="center" android:id="@id/enter_password" android:background="@drawable/button_style" android:focusable="true" android:layout_width="0.0dp" android:layout_height="wrap_content" android:layout_margin="@dimen/_3sdp" android:text="@string/enter" android:textAllCaps="true" android:elevation="3.0dp" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/password" style="?android:buttonBarButtonStyle" />
</androidx.constraintlayout.widget.ConstraintLayout>
